crates/devup-mcp-devup-ui/tests/snapshots/wquw_151__wquw_151_proofread_used_tokens.snap
---
source: crates/devup-mcp-devup-ui/tests/wquw_151.rs
expression: output.used_tokens
---
[
  "background",
  "backgroundLight",
  "border",
  "borderBold",
  "caption",
  "captionLight",
  "containerBackground",
  "gray300",
  "innerBg",
  "primary",
  "primaryLight",
  "text",
  "textLight"
]
